# remote-cinema

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt
client/src/: decode.c  encode.c  imageviewwidget.cpp  imageviewwidget.h  main.cpp
server/: CMakeLists.txt
server/src/: main.cpp
